followup bustage-related fix for bug 386154, r+sr=biesi, a=gavins for checkin to closed tree